Fix carousel on mobile, fix nav not closing

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -10,6 +10,7 @@
   --accent-whitewashed: #ffdca8;
   --text-color-light: white;
   overflow-x: hidden;
+  scroll-behavior: smooth;
 
 
 
